# OpenMP_learn

./: CMakeLists.txt  README.md  hello.cpp  learn.md
src/: exercise2.cpp  lesson18.cpp
